--- a/IndoorDesign.csproj
+++ b/IndoorDesign.csproj
@@ -17,4 +17,8 @@
       <PackageReference Include="MudBlazor" Version="7.0.0" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Data\" />
+    </ItemGroup>
+
 </Project>
